0.2.1 2019-11-27
    - [dom.c] Split-off domASTKey() and domXPathKey() functions from domNodeName().
    - [LibXML::Node]
      -- revert .nodeName(), 0.1.9 changes; restore to DOM compliant names:
         #cdata => #data-section, #fragment' => #document-fragment,
         #xml|#html|#docb => #document
      -- instead, introduce new method .ast-key() which returns the above names:
         (#cdata, #fragment, #xml, #html, #doc). Use this for AST construction.
0.2.0 2019-11-26
    - [LibXML::Native][LibXML::Config] really disable network access this time.
      Started, but not completed properly in release 0.1.0.
    - [LibXML::Schema] Disable network loading of `xsd:import` statements by
      default. These can be enabled via the :network flag. Further control is
      then possible by setting up custom entity loaders and/or input callbacks.
0.1.12 2019-11-23
    - [doc][META6.json] Replace 'Perl 6' with 'Raku'
    - [LibXML::_Options] fix options parsing, broken in 0.1.11
0.1.11 2019-11-22
    - [LibXML::Node::Set] add .reverse() method
    - [LibXML::Namespace] bug-fix to .unique-key() method
    - [dom.c] fix handling of DTD nodes as arguments to domAppendChild(),
      domReplaceChild(), domInsertBefore(), domReplaceNode() and domAddSibling()
    - [LibXML::Parser][LibXML::_Options] tweak options processing
0.1.10 2019-11-20
    - [LibXML::Find::Context] fix memory leaks in .find() and .findnodes(). Fix
      find() so it now iterates on node sets e.g.: for $e.find { ... }
0.1.9 2019-11-07
    New AST construction mode:
    - [LibXML::Item] add ast-to-xml() - for succint construction of nodes from data
    - [LibXML::PI] nodeName() method now prepends '?'
    - [LibXML::CData] - nodeName shortened from '#cdata-section' to '#cdata'
    - [LibXML::Node]
      -- getElementsByTag name can now select '?pi-name', '?*', '@*' 
      -- added .ast() method
    'Pluggable' CSS Selectors:
    - [LibXML::XPath::Context] Implement querySelector() and querySelectorAll()