@@ -5,7 +5,9 @@
          #cdata => #data-section, #fragment' => #document-fragment,
          #xml|#html|#docb => #document
       -- instead, introduce new method .ast-key() which returns the above names:
-         (#cdata, #fragment, #xml, #html, #doc). Use this for AST construction.
+         (#cdata, #fragment, #xml, #html, #doc) for AST construction.
+      -- the from-ast() accepts all of the above (i.e.. #cdata, or #cdata-section;
+         #document or #xml, #fragment, or #document-fragment)
 0.2.0 2019-11-26
     - [LibXML::Native][LibXML::Config] really disable network access this time.
       Started, but not completed properly in release 0.1.0.
